--- a/vignettes/example_application.Rmd
+++ b/vignettes/example_application.Rmd
@@ -16,50 +16,42 @@ knitr::opts_chunk$set(
 )
 ```
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+## Installation
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r, eval=FALSE}
+# install and load package
+devtools::install_github('jeffreyziegler/openEnded', force=T, build_vignettes=T)
+library(openEnded)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
-
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r, echo=FALSE, messages=F}
+# load package
+library(openEnded)
 ```
 
-Also a quote using `>`:
+## Example Application: Ziegler (2020)
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+```{r}
+# load data from GitHub
+replication_complete.cases <- read.csv("http://bit.ly/repData", 
+                                       stringsAsFactors = F)
+# re-level factors
+replication_complete.cases$Concordant <- relevel(as.factor(replication_complete.cases$Concordant), ref = "0")
+replication_complete.cases$attendanceBin <- relevel(as.factor(replication_complete.cases$attendanceBin), ref = "Never/yearly")
+```
+
+Create similarity measures.
+
+```{r}
+# create jaccard and cosine similarity measures
+replication_complete.cases <- similarityMeasures(dataframe=replication_complete.cases, 
+                           similarity_measures_to_calculate=c("jaccard", "cosine", "jw", "dl"), 
+                           prompt="textViewed", response="validityCheck", ngrams=3)
+```
+
+```{r, fig.show=TRUE, fig.height=6, fig.width=7, align="center", warning=F, message=F}
+# plot Jaccard distances for just Brazil
+brazil_rows <- which(replication_complete.cases$Country=="Brazil")
+plotSimilarity(dataframe=replication_complete.cases[brazil_rows,],
+               measure="jaccardDist", xlab="Jaccard Similarity")
+```
